# TuringMachine

./: .env  .gitignore  .gitmodules  Cargo.toml  Dockerfile  PacletInfo.wl  README-raw.md  README.md  TuringMachineSearch.nb  TuringMachineSearch.wl  act_run.sh  build.wl  build.wls  build_all_targets.sh  ci_build.wl  ci_submit.wl  docker_build.sh  docker_build.wl  setup_cross_compile.sh  setup_rust.sh  start_wl.sh  zcc
.cargo/: config.toml
.github/workflows/: Submit.yml  build_paclet.yml
Libs/ndtm_search/: Cargo.toml
Libs/ndtm_search/src/: lib.rs  models.rs
Libs/ndtm_search/tests/: dtm_convergence_test.rs  integration_test.rs
Notebooks/: TuringMachineSearch.nb
Proofs/: group_rules.lean  lake-manifest.json  lakefile.lean  rule_equivalences.md  sieve.lean  sieve2.lean  three_two_rules.md  trace.lean  two_two_rules.md
Proofs/BiTM/: Basic.lean  CockeMinsky.lean
Proofs/OneSidedTM/: AllPlusOne.lean  Basic.lean  ClassB.lean  ClassC.lean  ClassD.lean  ClassR.lean  ClassS.lean  ClassSB.lean  ClassSX.lean  ClassW.lean  ClassWL.lean  Decide.lean  Equiv.lean  ModularTrap.lean  NearMiss.lean  PlusOne.lean  TestLemma.lean  ThreeState.lean
Proofs/TM/: Defs.lean
Proofs/TagSystem/: Basic.lean  TagToCTS.lean
TuringMachine/: PacletInfo.wl  ResourceDefinition.md  ResourceDefinition.nb  TuringMachine | Definition Notebook.nb  build.wls
TuringMachine/Kernel/: Compiled.wl  Functions.wl  Multiway.wl  TuringMachine.wl  Visualizations.wl
TuringMachineSearch/: PacletInfo.wl
TuringMachineSearch/Kernel/: Compiled.wl  Functions.wl  Multiway.wl  TuringMachineSearch.wl  (+1 more)
(+39 files in other folders)
